2016-06-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/xfer-dest-taper-splitter.c: Fix error path
	* perl/Amanda/Report.pm: Fix exit_status
	* perl/Amanda/Report/human.pm: Fix line spacing
	* server-src/amstatus.pl: Add dump_time
	* server-src/driver.c: Do not log 'too many taper retry'
	* server-src/xfer-source-holding.c (cancel_impl): Set eogf_flag on
	  the mem_ring
	* xfer-src/xfer.c: Add debugging statement
	* installcheck/Makefile.am (server_tests): Add new test file
	* installcheck/Makefile.am (catalogs): Add new catalog file
	* installcheck/Amanda_Report.pl,
	  installcheck/Amanda_Rest_Runs.pl,
	  installcheck/Installcheck/Run.pm,
	  installcheck/amdump.pl,
	  installcheck/amreport.pl: Add and fix test
	* installcheck/success-dumper-chunker+dumper-chunker-taper-flush.pl
	  installcheck/success-dumper-chunker+taper-flush.pl
	  installcheck/success-dumper-chunker-taper.pl
	  installcheck/success-dumper-taper.pl: New test
	* installcheck/catalogs/dumper-chunker-taper-success.cat,
	  installcheck/catalogs/dumper-taper-success.cat: New catalog

2016-06-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: Fix race by loading the ps_table early

2016-06-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amrandom.pl: Improve debugging
	* common-src/shm-ring.c: Improve debugging

2016-06-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/gettext-macros/gettext.m4,
	  config/gettext-macros/po.m4: s/AM_PROG_MKDIR_P/AC_PROG_MKDIR_P/

2016-06-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/libs.m4 (AMANDA_CHECK_LIBCURL): Check for
	  HMAC_CTX_init or HMAC_CTX_reset
	* common-src/glib-util.c, common-src/ssl-security.c,
	  device-src/s3-util.c, device-src/s3.c: Fix for openssl 1.1

2016-06-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Rest/Runs.pm (list one): Do not return emtpy string

2016-06-21  Jean-Louis Martineau <JMartineau@carbonite.com>